--- a/project/web/assets/css/app.css
+++ b/project/web/assets/css/app.css
@@ -64,3 +64,20 @@
 .linkedin-ic{
     color:#0077b5;
 }
+
+.app-footer {
+	/* position: fixed; */
+	bottom: 0;
+	margin: 0;
+	width: 100%;
+	line-height: 60px;
+	background-color: #f5f5f5;
+}
+
+th,td {
+	text-transform: capitalize;
+}
+
+#result_table{
+	overflow: auto;
+}
