--- a/project/web/assets/css/app.css
+++ b/project/web/assets/css/app.css
@@ -47,7 +47,16 @@
     background-color: #985eb5 !important;
     border-color: inherit !important;
 }
+
 /*Footer*/
+.app-footer {
+	/* position: fixed; */
+	bottom: 0;
+	margin: 0;
+	width: 100%;
+	line-height: 60px;
+	background-color: #f5f5f5;
+}
 
 .facebook-ic {
 	color: #0d8bf1;
@@ -64,20 +73,32 @@
 .linkedin-ic{
     color:#0077b5;
 }
-
-.app-footer {
-	/* position: fixed; */
-	bottom: 0;
-	margin: 0;
-	width: 100%;
-	line-height: 60px;
-	background-color: #f5f5f5;
-}
-
+/* 
 th,td {
 	text-transform: capitalize;
 }
 
 #result_table{
 	overflow: auto;
+} */
+
+/* Loader */
+.loader{
+	display: none;
+}
+.loader-body {
+	position: fixed;
+	z-index: 999;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	background: #ffffffb8;
+	display: flex;
+	justify-content: center;
+}
+
+.container-fluid.loader img {
+	width: 170px;
+	height: 170px;
+	margin: auto;
 }
